--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,9 @@
-asttokens==2.1.0
-backcall==0.2.0
-certifi==2022.9.24
-cffi==1.15.1
-chardet==3.0.4
-cryptography==38.0.3
-decorator==5.1.1
-executing==1.2.0
-idna==2.8
-ipdb==0.13.9
-ipython==8.6.0
-jedi==0.18.1
-matplotlib-inline==0.1.6
-numpy==1.23.4
-pandas==1.5.1
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-prompt-toolkit==3.0.32
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.21
-Pygments==2.13.0
-python-dateutil==2.8.2
-pytz==2022.6
-requests==2.22.0
-six==1.16.0
-stack-data==0.6.0
-toml==0.10.2
-traitlets==5.5.0
-urllib3==1.25.11
-wcwidth==0.2.5
-websocket-client==1.4.2
+setuptools
+cryptography
+ipdb
+ipython
+numpy
+pandas
+python-dateutil
+pytz
+websocket-client
